test/bad/classes/print04.px

class Test def
    String toString

print Test()
